<resources>
    <string name="app_name">Traffic Safety Education</string>
    <string name="question_number_prefix">Question %1$d.</string>
    <string name="default_question">This is a sample question?</string>
    <string name="video_title">Materi 1 : Safety Riding</string>
    <string name="sudah_menonton">Saya sudah menonton</string>


    <!--    video materi-->
    <string name="materi_1">Materi 1</string>
    <string name="judul_1">Safety Riding</string>
    <string name="pengantar_materi_1">\tSebelum kita berkendara, ada beberapa hal penting yang harus disiapkan untuk melakukan safety riding.</string>
    <string name="kesimpulan_materi_1">\tIngat, keamanan dalam berkendara adalah tanggung jawab bersama. Tetap berhati-hati, patuhi aturan lalu lintas, dan jaga keselamatan diri serta pengguna jalan lainnya 🛵🌟</string>

    <string name="materi_2">Materi 2</string>
    <string name="judul_2">Aturan Berlalu Lintas dan Marka Jalan yang Benar</string>
    <string name="pengantar_materi_2">\tSebelum kita melaju di jalan, ada hal-hal penting yang harus dipersiapkan untuk memastikan keselamatan saat berkendara.</string>
    <string name="kesimpulan_materi_2">\tIngat, keamanan saat berkendara merupakan tanggung jawab bersama. Selalu waspada, patuhi aturan lalu lintas, dan jaga keselamatan diri serta semua pengguna jalan lainnya 🛵🌟</string>
    <string name="selamat_telah_selesai">\tSelamat! Kamu udah berhasil menyelesaikan perjalanan kamu di Traffic Safety Education! Keren banget! Semoga pengetahuan dari pretest, materi, dan postest bisa jadi bekal yang super berguna buat aman berkendara kamu. Tetap jaga kewaspadaan ya, dan terus tingkatkan kesadaran tentang keselamatan berlalu lintas. Sekali lagi selamat buat kamu!</string>
    <string name="lorem">is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchan</string>
    <string name="nomor">25</string>
    <string name="next">Lanjut</string>
    <string name="prev">Kembali</string>
    <string name="postest">Postest</string>
    <string name="pretest">Pretest</string>

</resources>
