<?xml version="1.0" encoding="utf-8"?>
<!--activity_main.xml-->
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".materi.FirstVideoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="8dp"
            android:background="@drawable/bg_rounded">

            <TextView
                android:id="@+id/tvMateri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/materi_1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:background="@drawable/background_circle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/videoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/judul_1"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_bold"
                android:padding="6sp"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvMateri"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/webView"/>

            <WebView
                android:id="@+id/webView"
                android:layout_width="match_parent"
                android:layout_height="250sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/videoTitle"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/main_blue"
                android:text="@string/sudah_menonton"
                android:fontFamily="@font/poppins_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/webView" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottieAnimationView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="@id/webView"
                app:layout_constraintBottom_toBottomOf="@id/webView"
                app:layout_constraintStart_toStartOf="@id/webView"
                app:layout_constraintEnd_toEndOf="@id/webView"
                app:lottie_autoPlay="false"
                app:lottie_rawRes="@raw/check_blue_anim"
                app:lottie_loop="false"
                android:padding="85dp"
                android:background="@drawable/background_circle_main"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintBottom"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="6dp">

            <TextView
                android:id="@+id/pengatarMateri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/pengantar_materi_1"
                android:textSize="14sp"
                android:padding="4dp"
                android:textAlignment="textStart"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/containerMateri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pengatarMateri">
            </LinearLayout>

            <TextView
                android:id="@+id/kesimpulanMateri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/kesimpulan_materi_1"
                android:textSize="14sp"
                android:padding="4sp"
                android:textAlignment="textStart"
                android:fontFamily="@font/poppins_regular"
                android:justificationMode="inter_word"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/containerMateri" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <WebView
            android:id="@+id/fullscreenContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/footerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/constraintBottom"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/footerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="© 2023 Traffic Safety Education. All Rights Reserved."
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
